# coursework_6

./: .env.sample  .gitignore  README.md  blog.json  database.ini.sample  groups.json  my_config.py  pyproject.toml
blog/: admin.py  models.py  services.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blog_options_rename_information_blog_content_and_more.py  0003_alter_blog_image.py
blog/templates/blog/: blog_detail.html  index.html
config/: settings.py  urls.py
mail_app/: admin.py  apps.py  models.py  urls.py  utils.py  views.py
mail_app/management/commands/: period_mail.py  send_mail.py  send_status.py
mail_app/migrations/: 0001_initial.py  0002_alter_client_newsletter_and_more.py  0003_alter_newsletter_status.py  0004_alter_newsletter_status.py  0005_alter_client_status_alter_newsletter_status.py  0006_client_slug_newsletter_slug_alter_newsletter_message.py  0007_alter_client_slug_alter_newsletter_slug.py  0008_alter_newsletter_title.py  0009_newsletter_last_sent_at_alter_newsletter_periodicity.py  0010_alter_newsletter_first_sent_at_and_more.py  0011_alter_newsletter_first_sent_at_and_more.py  0012_alter_newsletter_first_sent_at_and_more.py  0013_alter_newsletter_count_delivered_and_more.py  0014_remove_newsletter_count_transition_and_more.py  0015_alter_newsletter_options_client_owner_message_owner_and_more.py  0016_remove_client_newsletter_client_newsletter.py  0017_remove_client_newsletter_newsletter_clients.py
users/: forms.py  models.py  urls.py  utils.py  views.py
users/migrations/: 0001_initial.py  0002_user_token.py
(+27 files in other folders)
