[tool.poetry]
name = "coursework-6"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
django-debug-toolbar = "^4.4.2"
flake8 = "^7.1.0"
pillow = "^10.3.0"
psycopg2 = "^2.9.9"
python-dotenv = "^1.0.1"
pytils = "^0.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
